--- a/index.html
+++ b/index.html
@@ -189,25 +189,24 @@
 
     <script>
         document.addEventListener("DOMContentLoaded", () => {
-            const fetchUserData = async () => {
+            const fetchUserData = async (steamId) => {
+                const legacyUrl = 'https://api.steampowered.com/ISteamUser/GetPlayerSummaries/v0002/?key=FE561FC69BCCD185BD198BC9C311AB60&steamids=76561198822516631'
+                const url = `http://localhost:3000/getplayersummary/?${steamId}`
                 try {
-                    const response = await fetch("https://api.steampowered.com/ISteamUser/GetPlayerSummaries/v0002/?key=FE561FC69BCCD185BD198BC9C311AB60&steamids=76561198822516631", {
-                        credentials: "include",
-                        mode: "no-cors"
-                    })
+                    const response = await fetch(url)
 
                     if (!response.ok) {
                         throw new Error("Что-то пошло не так")
                     }
 
                     const userData = await response.json()
-                    console.log(userData)
+                    console.log(userData.response.players[0])
                 } catch (e) {
                     console.error(e)
                 }
             }
 
-            fetchUserData()
+            fetchUserData('76561198822516631')
         })
     </script>
 </body>
